// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GitSyncForm test rendering GitSyncForm for while create 1`] = `
<div
  class="StyledProps--font StyledProps--main gitSyncForm StyledProps--padding-top-large"
>
  <div
    class="bp3-form-group"
    data-id="remoteType-0"
  >
    <div
      class="bp3-form-content"
    >
      <div
        class="StyledProps--main"
      >
        
        <div
          class="RadioButtonGroup--inline"
        >
          <label
            class="RadioButton--radio StyledProps--main"
          >
            <input
              class="RadioButton--input"
              disabled=""
              name="remoteType"
              type="radio"
              value="import"
            />
            <span
              class="RadioButton--radioIcon"
            />
            Use Existing Yaml
          </label>
          <label
            class="RadioButton--radio StyledProps--main"
          >
            <input
              checked=""
              class="RadioButton--input"
              name="remoteType"
              type="radio"
              value="create"
            />
            <span
              class="RadioButton--radioIcon"
            />
            Create New Yaml
          </label>
        </div>
      </div>
    </div>
  </div>
  <div
    class="Layout--horizontal StyledProps--main"
  >
    <div
      class="Layout--vertical StyledProps--main"
    >
      <div
        class="bp3-form-group"
        data-id="null-1"
      >
        <label
          class="bp3-label"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="GitSyncForm_connectorRef"
          >
            Select Git Connector
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <button
            class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
            data-testid="cr-field-connectorRef"
            style="width: 350px;"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              <div
                class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
              >
                <p
                  class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                />
                <div
                  class="rightStatus"
                >
                  <span
                    class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                    data-testid="crf-status"
                    icon="full-circle"
                  >
                    <svg
                      data-icon="full-circle"
                      height="6"
                      viewBox="0 0 16 16"
                      width="6"
                    >
                      <desc>
                        full-circle
                      </desc>
                      <path
                        d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </span>
                  <span
                    class="Tag--main"
                  >
                    <span
                      class="bp3-tag bp3-minimal"
                      id="tag"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        project
                      </span>
                    </span>
                  </span>
                </div>
              </div>
            </span>
            <span
              class="bp3-icon bp3-icon-chevron-down StyledProps--main"
              icon="chevron-down"
            >
              <svg
                data-icon="chevron-down"
                height="14"
                viewBox="0 0 16 16"
                width="14"
              >
                <desc>
                  chevron-down
                </desc>
                <path
                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
          </button>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="bp3-form-group"
          data-id="repo-2"
        >
          <label
            class="bp3-label"
            for="repo"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="GitSyncForm_repo"
            >
              repository
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="repo"
                    placeholder="- select -"
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal StyledProps--main"
      >
        <div
          class="bp3-form-group branchSelector"
          data-id="branch-3"
        >
          <label
            class="bp3-label"
            for="branch"
          >
            <span
              class="Tooltip--acenter"
              data-tooltip-id="GitSyncForm_branch"
            >
              gitBranch
            </span>
             
            <span
              class="bp3-text-muted"
            />
          </label>
          <div
            class="bp3-form-content"
          >
            <div
              class="bp3-popover-wrapper Select--main bp3-fill"
            >
              <div
                class="bp3-popover-target"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="branch"
                    placeholder="- select -"
                    style="padding-right: 0px;"
                    type="text"
                    value=""
                  />
                  <span
                    class="bp3-input-action"
                  >
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="bp3-form-group"
        data-id="filePath-4"
      >
        <label
          class="bp3-label"
          for="filePath"
        >
          <span
            class="Tooltip--acenter"
            data-tooltip-id="GitSyncForm_filePath"
          >
            Yaml Path
          </span>
           
          <span
            class="bp3-text-muted"
          />
        </label>
        <div
          class="bp3-form-content"
        >
          <div
            class="bp3-input-group"
          >
            <input
              autocomplete="off"
              class="bp3-input"
              name="filePath"
              placeholder="Enter Yaml path"
              type="text"
              value=".harness/testIdentifier.yaml"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GitSyncForm test rendering GitSyncForm for while create 2`] = `
<div
  class="bp3-dialog referenceSelect dialog"
>
  <div
    class="bp3-dialog-header"
  >
    <h4
      class="bp3-heading"
    >
      <div
        class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-distribution-space-between"
      >
        <div
          class="Layout--vertical Layout--layout-spacing-xsmall StyledProps--main"
        >
          <p
            class="StyledProps--font StyledProps--main StyledProps--font-variation-h4"
          >
            common.entityReferenceTitle
          </p>
        </div>
        <div
          class="Layout--horizontal StyledProps--main bp3-popover-dismiss"
        >
          <button
            class="bp3-button Button--button StyledProps--font StyledProps--main StyledProps--margin-right-small Button--with-current-color Button--variation Button--variation-secondary"
            type="button"
          >
            <span
              class="bp3-button-text"
            >
              + newConnector
            </span>
          </button>
        </div>
      </div>
    </h4>
    <button
      aria-label="Close"
      class="bp3-button bp3-minimal bp3-dialog-close-button"
      type="button"
    >
      <span
        class="bp3-icon bp3-icon-small-cross"
        icon="small-cross"
      >
        <svg
          data-icon="small-cross"
          height="20"
          viewBox="0 0 20 20"
          width="20"
        >
          <desc>
            small-cross
          </desc>
          <path
            d="M11.41 10l3.29-3.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L10 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42L8.59 10 5.3 13.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71l3.29-3.3 3.29 3.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L11.41 10z"
            fill-rule="evenodd"
          />
        </svg>
      </span>
    </button>
  </div>
  <div
    class="contentContainer"
  >
    <div
      class="StyledProps--font StyledProps--main container"
    >
      <div
        class="tabsContainer"
      >
        <div
          class="bp3-tabs Tabs--main Tabs--horizontal"
        >
          <div
            class="bp3-tab-list"
            role="tablist"
          >
            <div
              class="bp3-tab-indicator-wrapper"
              style="height: 0px; transform: translateX(0px) translateY(0px); width: 0px;"
            >
              <div
                class="bp3-tab-indicator"
              />
            </div>
            <div
              aria-controls="bp3-tab-panel_selectScope_project"
              aria-disabled="false"
              aria-expanded="true"
              aria-selected="true"
              class="bp3-tab tabClass"
              data-tab-id="project"
              id="bp3-tab-title_selectScope_project"
              role="tab"
              tabindex="0"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
              >
                <span
                  class="bp3-icon StyledProps--main tabIcon"
                  data-icon="projects-wizard"
                >
                  <svg
                    fill="none"
                    height="14"
                    viewBox="0 0 32 32"
                    width="14"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M2.116 11.226l11.966 7.156c.208.118.61.118.82 0L27 11.045c.475-.27.326-1.14-.162-1.385L14.805 3.627a.68.68 0 00-.61 0L2.163 9.66c-.489.245-.522 1.296-.047 1.566zM3.202 9.66l.225 1.566L14.63 5.45l11.21 5.775V9.677l-11.675 6.838h.981L3.202 9.66zm10.304 8.045v12.693c0 .523.875 1.266 1.33 1.008l11.718-7.317c.693-.544.813-.74.813-1.777v-7.397c0-.378-.348-.76-.813-.76-.465 0-.868.382-.868.76v7.247l-11.486 7 1.232 1.16-.03-12.617c0-.378-.525-.716-.902-.716-.376 0-.994.338-.994.716zm1.578 11.869L2.85 22.16l.692 1.386-.116-12.578c0-.377-.581-.978-.958-.978a.683.683 0 00-.681.684v12.872c0 .24.125.462.33.585l12.033 7.266a.68.68 0 00.935-.233c.195-.324.323-1.395 0-1.59zM5.325 16.087l4.011 2.414a.68.68 0 00.936-.235.685.685 0 00-.234-.938l-4.011-2.413a.68.68 0 00-.935.234.685.685 0 00.233.938z"
                      fill="#fff"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-h6 StyledProps--font-weight-light"
                  style="--text-line-clamp: 1;"
                >
                  projectLabel
                </p>
                
              </div>
            </div>
            <div
              aria-controls="bp3-tab-panel_selectScope_organization"
              aria-disabled="false"
              aria-expanded="false"
              aria-selected="false"
              class="bp3-tab tabClass"
              data-tab-id="organization"
              id="bp3-tab-title_selectScope_organization"
              role="tab"
              tabindex="0"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
              >
                <span
                  class="bp3-icon bp3-icon-diagram-tree StyledProps--main tabIcon"
                  icon="diagram-tree"
                >
                  <svg
                    data-icon="diagram-tree"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      diagram-tree
                    </desc>
                    <path
                      d="M15 8v3h-2V9H9v2H7V9H3v2H1V8a1 1 0 011-1h5V5h2v2h5a1 1 0 011 1zM1 12h2a1 1 0 011 1v2a1 1 0 01-1 1H1a1 1 0 01-1-1v-2a1 1 0 011-1zm12 0h2a1 1 0 011 1v2a1 1 0 01-1 1h-2a1 1 0 01-1-1v-2a1 1 0 011-1zm-6 0h2a1 1 0 011 1v2a1 1 0 01-1 1H7a1 1 0 01-1-1v-2a1 1 0 011-1zM7 0h2a1 1 0 011 1v2a1 1 0 01-1 1H7a1 1 0 01-1-1V1a1 1 0 011-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-h6 StyledProps--font-weight-light"
                  style="--text-line-clamp: 1;"
                >
                  orgLabel
                </p>
                
              </div>
            </div>
            <div
              aria-controls="bp3-tab-panel_selectScope_account"
              aria-disabled="false"
              aria-expanded="false"
              aria-selected="false"
              class="bp3-tab tabClass"
              data-tab-id="account"
              id="bp3-tab-title_selectScope_account"
              role="tab"
              tabindex="0"
            >
              <div
                class="Layout--horizontal StyledProps--main StyledProps--flex StyledProps--flex-alignItems-center StyledProps--flex-justifyContent-flex-start StyledProps--padding-left-xsmall StyledProps--padding-right-xsmall"
              >
                <span
                  class="bp3-icon bp3-icon-layers StyledProps--main tabIcon"
                  icon="layers"
                >
                  <svg
                    data-icon="layers"
                    height="14"
                    viewBox="0 0 16 16"
                    width="14"
                  >
                    <desc>
                      layers
                    </desc>
                    <path
                      d="M.55 4.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5a.998.998 0 00-.06-1.81L8.4.08a1.006 1.006 0 00-.79 0l-6.99 3a.992.992 0 00-.07 1.81zM15 10c-.16 0-.31.04-.45.11L8 13.38 1.45 10.1c-.14-.06-.29-.1-.45-.1-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1zm0-3.5c-.16 0-.31.04-.45.11L8 9.88 1.45 6.61A.997.997 0 001 6.5c-.55 0-1 .45-1 1 0 .39.23.73.55.89l7 3.5c.14.07.29.11.45.11s.31-.04.45-.11l7-3.5c.32-.16.55-.5.55-.89 0-.55-.45-1-1-1z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main StyledProps--font-variation-h6 StyledProps--font-weight-light"
                  style="--text-line-clamp: 1;"
                >
                  account
                </p>
                
              </div>
            </div>
          </div>
          <div
            aria-hidden="false"
            aria-labelledby="bp3-tab-title_selectScope_project"
            class="bp3-tab-panel tabClass"
            id="bp3-tab-panel_selectScope_project"
            role="tabpanel"
          >
            <div
              class="Layout--vertical Layout--layout-spacing-large StyledProps--main"
            >
              <div
                class="searchBox"
              >
                <div
                  class="TextInput--main search"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <span
                      class="bp3-icon bp3-icon-search StyledProps--main"
                      icon="search"
                    >
                      <svg
                        data-icon="search"
                        height="12"
                        viewBox="0 0 16 16"
                        width="12"
                      >
                        <desc>
                          search
                        </desc>
                        <path
                          d="M15.55 13.43l-2.67-2.68a6.94 6.94 0 001.11-3.76c0-3.87-3.13-7-7-7s-7 3.13-7 7 3.13 7 7 7c1.39 0 2.68-.42 3.76-1.11l2.68 2.67a1.498 1.498 0 102.12-2.12zm-8.56-1.44c-2.76 0-5-2.24-5-5s2.24-5 5-5 5 2.24 5 5-2.24 5-5 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <input
                      class="bp3-input"
                      placeholder="search"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
              <div
                class="StyledProps--font StyledProps--main StyledProps--flex StyledProps--flex-align-center-center StyledProps--padding-small"
              >
                <span
                  class="bp3-icon StyledProps--main StyledProps--color StyledProps--color-primary7"
                  data-icon="spinner"
                >
                  <svg
                    fill="none"
                    height="24"
                    viewBox="0 0 36 36"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 2.084a15.915 15.915 0 010 31.831 15.915 15.915 0 010-31.83"
                      stroke="currentColor"
                      stroke-dasharray="75,100"
                      stroke-linecap="round"
                      stroke-width="2.8"
                      style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box;"
                    />
                  </svg>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="Layout--horizontal Layout--layout-spacing-medium StyledProps--main StyledProps--padding-top-medium"
      >
        <button
          class="bp3-button bp3-disabled Button--button StyledProps--font StyledProps--main bp3-popover-dismiss Button--with-current-color Button--variation Button--variation-primary"
          disabled=""
          tabindex="-1"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            entityReference.apply
          </span>
        </button>
        <button
          class="bp3-button Button--button StyledProps--font StyledProps--main Button--with-current-color Button--variation Button--variation-tertiary"
          type="button"
        >
          <span
            class="bp3-button-text"
          >
            cancel
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`GitSyncForm test rendering GitSyncForm for while create 3`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main gitSyncForm StyledProps--padding-top-large"
        >
          <div
            class="bp3-form-group"
            data-id="remoteType-0"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class="RadioButtonGroup--inline"
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      disabled=""
                      name="remoteType"
                      type="radio"
                      value="import"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    Use Existing Yaml
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      class="RadioButton--input"
                      name="remoteType"
                      type="radio"
                      value="create"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    Create New Yaml
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="bp3-form-group"
                data-id="null-1"
              >
                <label
                  class="bp3-label"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="GitSyncForm_connectorRef"
                  >
                    Select Git Connector
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <button
                    class="bp3-button bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="cr-field-connectorRef"
                    style="width: 350px;"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <span
                          class="bp3-popover-wrapper"
                        >
                          <span
                            class="bp3-popover-target Text--targetClass"
                          >
                            <p
                              class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                              tabindex="0"
                            >
                              ValidGithubRepo
                            </p>
                          </span>
                        </span>
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status greenStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal"
                              id="tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                project
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <div
                  class="bp3-form-group"
                  data-id="repo-2"
                >
                  <label
                    class="bp3-label"
                    for="repo"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="GitSyncForm_repo"
                    >
                      repository
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="repo"
                            placeholder="- select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <div
                  class="bp3-form-group branchSelector"
                  data-id="branch-3"
                >
                  <label
                    class="bp3-label"
                    for="branch"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="GitSyncForm_branch"
                    >
                      gitBranch
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            name="branch"
                            placeholder="- select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group"
                data-id="filePath-4"
              >
                <label
                  class="bp3-label"
                  for="filePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="GitSyncForm_filePath"
                  >
                    Yaml Path
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      name="filePath"
                      placeholder="Enter Yaml path"
                      type="text"
                      value=".harness/testIdentifier.yaml"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`GitSyncForm test rendering GitSyncForm for while edit : all field should be disabled 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      action="#"
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main gitSyncForm StyledProps--padding-top-large"
        >
          <div
            class="bp3-form-group"
            data-id="remoteType-0"
          >
            <div
              class="bp3-form-content"
            >
              <div
                class="StyledProps--main"
              >
                
                <div
                  class="RadioButtonGroup--inline"
                >
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      class="RadioButton--input"
                      disabled=""
                      name="remoteType"
                      type="radio"
                      value="import"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    Use Existing Yaml
                  </label>
                  <label
                    class="RadioButton--radio StyledProps--main"
                  >
                    <input
                      checked=""
                      class="RadioButton--input"
                      disabled=""
                      name="remoteType"
                      type="radio"
                      value="create"
                    />
                    <span
                      class="RadioButton--radioIcon"
                    />
                    Create New Yaml
                  </label>
                </div>
              </div>
            </div>
          </div>
          <div
            class="Layout--horizontal StyledProps--main"
          >
            <div
              class="Layout--vertical StyledProps--main"
            >
              <div
                class="bp3-form-group"
                data-id="null-1"
              >
                <label
                  class="bp3-label"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="GitSyncForm_connectorRef"
                  >
                    Select Git Connector
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <button
                    class="bp3-button bp3-disabled bp3-minimal Button--button StyledProps--font StyledProps--main container Button--iconOnly Button--without-shadow Button--withRightIcon"
                    data-testid="cr-field-connectorRef"
                    disabled=""
                    style="width: 350px;"
                    tabindex="-1"
                    type="button"
                  >
                    <span
                      class="bp3-button-text"
                    >
                      <div
                        class="Layout--horizontal Layout--layout-spacing-small StyledProps--main selectWrapper StyledProps--flex StyledProps--flex-distribution-space-between"
                      >
                        <p
                          class="StyledProps--font StyledProps--main label StyledProps--color StyledProps--color-grey800"
                        />
                        <div
                          class="rightStatus"
                        >
                          <span
                            class="bp3-icon bp3-icon-full-circle StyledProps--main status redStatus"
                            data-testid="crf-status"
                            icon="full-circle"
                          >
                            <svg
                              data-icon="full-circle"
                              height="6"
                              viewBox="0 0 16 16"
                              width="6"
                            >
                              <desc>
                                full-circle
                              </desc>
                              <path
                                d="M8 0a8 8 0 100 16A8 8 0 108 0z"
                                fill-rule="evenodd"
                              />
                            </svg>
                          </span>
                          <span
                            class="Tag--main"
                          >
                            <span
                              class="bp3-tag bp3-minimal"
                              id="tag"
                            >
                              <span
                                class="bp3-text-overflow-ellipsis bp3-fill"
                              >
                                project
                              </span>
                            </span>
                          </span>
                        </div>
                      </div>
                    </span>
                    <span
                      class="bp3-icon bp3-icon-chevron-down StyledProps--main"
                      icon="chevron-down"
                    >
                      <svg
                        data-icon="chevron-down"
                        height="14"
                        viewBox="0 0 16 16"
                        width="14"
                      >
                        <desc>
                          chevron-down
                        </desc>
                        <path
                          d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                  </button>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-disabled"
                  data-id="repo-2"
                >
                  <label
                    class="bp3-label"
                    for="repo"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="GitSyncForm_repo"
                    >
                      repository
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="repo"
                            placeholder="- select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="Layout--horizontal StyledProps--main"
              >
                <div
                  class="bp3-form-group bp3-disabled branchSelector"
                  data-id="branch-3"
                >
                  <label
                    class="bp3-label"
                    for="branch"
                  >
                    <span
                      class="Tooltip--acenter"
                      data-tooltip-id="GitSyncForm_branch"
                    >
                      gitBranch
                    </span>
                     
                    <span
                      class="bp3-text-muted"
                    />
                  </label>
                  <div
                    class="bp3-form-content"
                  >
                    <div
                      class="bp3-popover-wrapper Select--main bp3-fill"
                    >
                      <div
                        class="bp3-popover-target"
                      >
                        <div
                          class="bp3-input-group bp3-disabled"
                        >
                          <input
                            autocomplete="off"
                            class="bp3-input"
                            disabled=""
                            name="branch"
                            placeholder="- select -"
                            style="padding-right: 0px;"
                            type="text"
                            value=""
                          />
                          <span
                            class="bp3-input-action"
                          >
                            <span
                              class="bp3-icon bp3-icon-chevron-down StyledProps--main StyledProps--padding-small"
                              icon="chevron-down"
                            >
                              <svg
                                data-icon="chevron-down"
                                height="14"
                                viewBox="0 0 16 16"
                                width="14"
                              >
                                <desc>
                                  chevron-down
                                </desc>
                                <path
                                  d="M12 5c-.28 0-.53.11-.71.29L8 8.59l-3.29-3.3a1.003 1.003 0 00-1.42 1.42l4 4c.18.18.43.29.71.29s.53-.11.71-.29l4-4A1.003 1.003 0 0012 5z"
                                  fill-rule="evenodd"
                                />
                              </svg>
                            </span>
                          </span>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
              <div
                class="bp3-form-group bp3-disabled"
                data-id="filePath-4"
              >
                <label
                  class="bp3-label"
                  for="filePath"
                >
                  <span
                    class="Tooltip--acenter"
                    data-tooltip-id="GitSyncForm_filePath"
                  >
                    Yaml Path
                  </span>
                   
                  <span
                    class="bp3-text-muted"
                  />
                </label>
                <div
                  class="bp3-form-content"
                >
                  <div
                    class="bp3-input-group bp3-disabled"
                  >
                    <input
                      autocomplete="off"
                      class="bp3-input"
                      disabled=""
                      name="filePath"
                      placeholder="Enter Yaml path"
                      type="text"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
